# ChangeLog for sys-apps/calculate-utilities
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-utilities-2.2.11 (11 Mar 2011)

  11 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.11.ebuild:
  Bump version

*calculate-utilities-2.2.10-r3 (10 Mar 2011)

  10 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.10-r3.ebuild:
  Update for calculate-install.

*calculate-utilities-2.2.10-r2 (10 Mar 2011)

  10 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.10-r2.ebuild:
  Update for calculate-install.

*calculate-utilities-2.2.10-r1 (09 Mar 2011)

  09 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.10-r1.ebuild:
  Update by calculate-templates.

*calculate-utilities-2.2.10 (09 Mar 2011)

  09 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.10.ebuild:
  Bump version

*calculate-utilities-2.2.9-r1 (05 Mar 2011)

  05 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.9-r1.ebuild:
  Update deps.
