@@ -2,7 +2,8 @@ EBUILD calculate-utilities-2.2.10-r1.ebuild 829 RMD160 d3e6c047351a9ee2b087557e1
 EBUILD calculate-utilities-2.2.10-r2.ebuild 832 RMD160 a87e6418b0749fcaec6ae4ab6bccc5b12dce8dc3 SHA1 568d8cdeba4ccd3f54868fba06855c8aa7c5601a SHA256 158b1d2e4c161a3eb616a47b0b9c3e11d48270b6a18ceca86181b17ddbde797f
 EBUILD calculate-utilities-2.2.10-r3.ebuild 832 RMD160 63c3701fc0a82c881ebbe4b5506ee986588535a4 SHA1 1e194dd5ccd51dfe75800a26d4ba8d308e6a8f09 SHA256 6ba8d18a62bd8a2f1c8717b24257fd49bceb7ca2a31e328c23b46c709713ffc3
 EBUILD calculate-utilities-2.2.10.ebuild 826 RMD160 9110768e34b2fdfc8d8744c65f6c87ca4e32eef1 SHA1 6bb49b943ecf3445e3196154cae5f6efee09e656 SHA256 8f35524a0e17bcb7965891bca3457015e2298e6d23f73462a3b75d7b0e1ad80a
+EBUILD calculate-utilities-2.2.11-r1.ebuild 829 RMD160 260e7ed1151cad1dab49ddf1142a16d5dc2d199b SHA1 e0765ad2fdcf8b8a3aba3d406bd0565dc9a940cc SHA256 c5a2b5f2a3aca9046a1817c00b71debde60b8b26b0d70dfd2e4b3f9f1b52dc26
 EBUILD calculate-utilities-2.2.11.ebuild 826 RMD160 a31f207212f4f45ed7339ebcfd025411daf8216e SHA1 59774fb8683f84cc80412bf55de399f4458ba0ed SHA256 8cd64cf7717d97b29536a908f7a52b4269a095e9474a24c0e67e12295918152a
 EBUILD calculate-utilities-2.2.9-r1.ebuild 827 RMD160 403b1ade7438d0d1a2558af3c1f4825cad47f026 SHA1 b4215902dd5550f1af37516984eafc0f7b5356da SHA256 76076e498268e58e52dc85940cc565c6e960f4db118e12ee438356c1512e5087
 EBUILD calculate-utilities-2.2.9.ebuild 827 RMD160 c62546891ead80e1cac33429ddb43cdf5dace57f SHA1 106ad4656826622e6e18c00146f79d312782c654 SHA256 a564a96b6b56dd528f827a2b6815432c1ea0e7c856d6896506bc2871aa5c8e3b
-MISC ChangeLog 1145 RMD160 273921071f3e7354ea4e4db01f4e01118efb4c3f SHA1 b22f233917be367550f0e86a88af442380d9c7ef SHA256 3417eb04bf3da0eb651e6622f63a1ee40d1b25a38c48003a20362a8d2e6525ea
+MISC ChangeLog 1327 RMD160 1aeb7cc295040fafe859e104a4ce621283e68dff SHA1 dc3c061f1bf66cf36bf4b03b0aa0a7355a363f79 SHA256 34394a75ab85c721fc8ee49a41d7bee8e4986581104aa329fd21b5c374bf083a
