@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.11-r1 (11 Mar 2011)
+
+  11 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.11-r1.ebuild:
+  Update for calculate-templates.
+
 *calculate-utilities-2.2.11 (11 Mar 2011)
 
   11 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
